# real-world-haskell

./: .gitignore
ch02/: lastButOne.hs  myDrop.hs
ch03/: Bookstore.hs  Lending.hs  ListADT.hs  exercises.hs
ch04/: Adler32.hs  FixLines.hs  Fold.hs  InteractWith.hs  Partial.hs  SplitLines.hs  SuffixTree.hs  dlts.hs  exercises.hs
ch05/: Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs  build.sh  mypretty.cabal
ch06/: AutomaticDerivation.hs  JSONClass.hs  Monomorphism.hs  Newtype.hs  Overlap.hs  eqclasses.hs  naiveeq.hs
ch08/: ElfMagic.hs  Glob.hs  GlobEither.hs  GlobRegex.hs  GlobRegexEither.hs  HightestClose.hs
ch09/: BetterFinder.hs  ControlledVisit.hs  FoldDir.hs  SimpleFinder.hs
