Name: mypretty
Version: 0.1

Synopsis: My pretty printing library, with JSON support
Description:
  A simple pretty-printing library that illustrates how to
  develop a Haskell library.

Author: Real World Haskell
Maintainer: luke.amdor@gmail.com

Cabal-Version: >= 1.17
Build-Type: Simple

library
  Exposed-Modules: Prettify
                   PrettyJSON
                   SimpleJSON
  Build-depends: base == 4.*
  Default-Language: Haskell2010